# colabfit-tools

./: .gitignore  README.md  pyproject.toml  setup.py
colabfit/tests/test_legacy/: legacy_test_hdf5backend.py  test_configurations.py
colabfit/tests/test_pg/: test_configuration.py  test_configuration_set.py  test_dataset.py  test_hash.py  test_property.py  test_schema.py
colabfit/tests/test_vast/: test_configuration.py  test_configuration_set.py  test_dataset.py  test_hash.py  test_property.py  test_schema.py
colabfit/tools/: configuration.py  database.py  dataset.py  pg_database.py  property.py  property_definitions.py  schema.py  utilities.py
colabfit/tools/legacy/: hdf5_backend.py
colabfit/tools/pg/: configuration.py  configuration_set.py  database.py  dataset.py  property.py  property_map.py  schema.py  utilities.py
colabfit/tools/pg/utils/: __init__.py  data_processing.py  file_management.py  hashing.py  metadata.py  schema_management.py
colabfit/tools/vast/: configuration.py  configuration_set.py  database.py  dataset.py  parsers.py  property.py  schema.py  utilities.py
docs/: pg_usage_guide.md
docs/source/: basic_example.rst  classes.rst  configuration.rst  database.rst  database_structure.rst  getting_started.rst  md_file_input.rst  mongo_overview.rst  overview.rst  property.rst  property_definitions.rst  property_settings.rst  qm9.rst  si_prx_gap.rst  usage.rst
